Cálculos geométricos preliminares

--- a/calculatorrr.ipynb
+++ b/calculatorrr.ipynb
@@ -43,16 +43,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0] calculando FRONT_L\n",
+      "[ 0] calculando \"FRONT_L\"\n",
       "\tl: [208.75 310.05 220.   263.67]\n",
       "\tMIN:-184.69° MAX:-174.69°\n",
       "\tPasos: 20\n",
-      "\tGUARDADO EXITOSAMENTE EN: ./resultados/FRONT_L.csv\n",
-      "[ 1] calculando REAR_L\n",
+      "\tGUARDADO EXITOSAMENTE EN: \"./resultados/FRONT_L.csv\"\n",
+      "\n",
+      "[ 1] calculando \"REAR_L\"\n",
       "\tl: [177.7  308.19 220.   259.3 ]\n",
       "\tMIN: 175.00° MAX: 185.00°\n",
       "\tPasos: 20\n",
-      "\tGUARDADO EXITOSAMENTE EN: ./resultados/REAR_L.csv\n"
+      "\tGUARDADO EXITOSAMENTE EN: \"./resultados/REAR_L.csv\"\n",
+      "\n"
      ]
     }
    ],
@@ -87,7 +89,7 @@
     "\tMIN_ANGLE = theta2 - RANGE\n",
     "\ttheta2s = np.arange(MIN_ANGLE, MAX_ANGLE, STEP)\n",
     "\n",
-    "\tprint(f'[{i:2d}] calculando {name}')\n",
+    "\tprint(f'[{i:2d}] calculando \"{name}\"')\n",
     "\tprint(f'\\tl: {l}')\n",
     "\tprint(f'\\tMIN:{np.rad2deg(MIN_ANGLE):7.2f}° MAX:{np.rad2deg(MAX_ANGLE):7.2f}°')\n",
     "\tprint(f'\\tPasos: {theta2s.shape[0]}')\n",
@@ -98,7 +100,8 @@
     "\n",
     "\tresult_dir = f'{directorio_resultados}/{name}.csv'\n",
     "\tresult_df.to_csv(result_dir)\n",
-    "\tprint(f'\\tGUARDADO EXITOSAMENTE EN: {result_dir}')\n"
+    "\tprint(f'\\tGUARDADO EXITOSAMENTE EN: \"{result_dir}\"')\n",
+    "\tprint()\n"
    ]
   }
  ],
